# TS-research

./: .gitignore  README.md  approximation.py  clean_research.ipynb  demo_approximation.ipynb  demo_imputation.ipynb  demo_imputation_comparison.ipynb  fourier_core.py  imputation.py  joint_imputation.ipynb  pyproject.toml  requirements.txt  signal_utils.py
data/: ETTh1.h5  salesdata_uci.csv
data/sales_agg_no_site/: calendar.xlsx  sales_105_agg_no_site.xlsx
docs/: PARAMETERS.md
notebooks/: datasets_eda.ipynb  demo_approximation.ipynb  demo_imputation.ipynb  demo_imputation_comparison.ipynb  joint_imputation.ipynb  joint_imputation_experiments.ipynb  sales_agg_eda.ipynb  salesdata_uci_eda.ipynb
src/: __init__.py  approximation.py  baselines.py  experiments.py  imputation.py  joint_imputation.py
