[project]
name = "ts-research"
version = "0.1.0"
description = "Time series research: Fourier-based imputation and sparse recovery methods"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.6",
    "pandas>=2.0",
    "cvxpy>=1.4",
    "joblib>=1.3",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "seaborn>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "seaborn>=0.12",
]
